--- a/src/App.css
+++ b/src/App.css
@@ -14,20 +14,27 @@ h5 {
   font-weight: 400;
 }
 
-.mt-0{
+.mt-0 {
   margin-top: 0px !important;
 }
 
-.mt-10{
+.mt-10 {
   margin-top: 10px !important;
 }
 
-h1,h2{
+h1,
+h2 {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
 }
 
-h3,h4,h5{
+h3,
+h4,
+h5 {
   margin-top: 1em;
   margin-bottom: 1em;
+}
+
+.error {
+  color: red;
 }
